--- a/sandflow/Cargo.toml
+++ b/sandflow/Cargo.toml
@@ -7,6 +7,7 @@ keywords = ["dataflow", "async", "distributed"]
 license = "MIT"
 
 [dependencies]
+log = "0.4"
 futures = "0.3"
 pin-project-lite = "0.2.8"
 sandflow-executor = { path = "../sandflow-executor" }
